infra/4-template_config/rendered/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/security-groups: sg-0f1ad045751d742d5
    alb.ingress.kubernetes.io/listen-ports: '[{ "HTTP": 80 }]'
    alb.ingress.kubernetes.io/healthcheck-port: "5000"

    alb.ingress.kubernetes.io/actions.weighted-routing: |
      {
        "type":"forward",
        "forwardConfig":{
          "targetGroups":[
            {"serviceName":"app-blue-service","servicePort":"80","weight":100},
            {"serviceName":"app-green-service","servicePort":"80","weight":0}
          ]
        }
      }
    alb.ingress.kubernetes.io/healthcheck-path: /health.html
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "15"
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "5"
    alb.ingress.kubernetes.io/healthy-threshold-count: "2"
    alb.ingress.kubernetes.io/unhealthy-threshold-count: "2"
    alb.ingress.kubernetes.io/success-codes: "200"
    kubernetes.io/ingress.class: alb
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: weighted-routing
                port:
                  name: use-annotation

---
apiVersion: v1
kind: Service
metadata:
  name: weighted-routing
  namespace: default
spec:
  ports:
    - port: 80
      protocol: TCP
